trunk/Archive2/1a/6b37947afbe626/output
main.cpp:13:16: error: '::main' must return 'int'
  void main(void)
                ^
